k8s-setup/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: argocd

---
kind: Namespace
apiVersion: v1
metadata:
  name: elastic-monitoring
