k8s-setup/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # https://github.com/argoproj/argo-cd/issues/2953#issuecomment-932190859
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.minikube.local
    secretName: argocd-cert-secret
